feat: add `migrate:remote-staging` script for D1 migrations in staging environment.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "db:generate": "nuxt db generate",
     "start": "node .output/server/index.mjs",
-    "migrate:remote": "npx wrangler d1 migrations apply nac-template-db --remote"
+    "migrate:remote": "npx wrangler d1 migrations apply nac-template-db --remote",
+    "migrate:remote-staging": "npx wrangler d1 migrations apply DB --env staging --remote"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.75",
