feat: Upgrade dependencies, configure Cloudflare custom domains and environment variables, and update Drizzle migration.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,7 @@
 # wrangler.toml
 name = "nuxt-auto-crud-template"
+route = { pattern = "auto-crud.clifland.in", custom_domain = true }
+
 compatibility_date = "2026-01-21"
 main = ".output/server/index.mjs"
 compatibility_flags = ["nodejs_compat"]
@@ -15,9 +17,13 @@ migrations_dir = "server/db/migrations/sqlite"
 binding = "KV"
 id = "12850c35c07a4574ad0a51ba6e6832ec"
 
+[vars]
+NUXT_PUBLIC_ENV = "production"
+
 # --- Staging Environment ---
 [env.staging]
 name = "nuxt-auto-crud-template-staging"
+route = { pattern = "staging.auto-crud.clifland.in", custom_domain = true }
 
 [[env.staging.d1_databases]]
 binding = "DB"
@@ -28,6 +34,8 @@ migrations_dir = "server/db/migrations/sqlite"
 [[env.staging.kv_namespaces]]
 binding = "KV"
 id = "37560ed6b08a400392edff1120e299dd"
+
+vars = { NUXT_PUBLIC_ENV = "staging" }
 
 # --- Shared Config ---
 [observability]
