--- a/package.json
+++ b/package.json
@@ -3,57 +3,60 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "NODE_OPTIONS='--max-old-space-size=4096' nuxt build",
-    "dev": "nuxt dev",
-    "preview": "nuxt preview",
+    "// --- Development ---": "",
+    "dev": "nuxi dev",
+    "postinstall": "nuxi prepare",
+    "preview": "nuxi preview",
     "lint": "eslint .",
-    "typecheck": "nuxt typecheck",
-    "test": "vitest",
-    "db:generate": "nuxt db generate",
-    "start": "node .output/server/index.mjs",
-    "build:staging": "NITRO_PRESET=cloudflare-module NODE_OPTIONS='--max-old-space-size=4096' npx nuxi build",
-    "deploy:staging": "npm run build:staging && npx wrangler deploy --env staging",
-    "deploy:prod": "bunx wrangler deploy",
-    "migrate:staging": "npx wrangler d1 migrations apply DB --env staging --remote",
-    "migrate:prod": "npx wrangler d1 migrations apply DB --remote",
-    "logs:staging": "npx wrangler tail --env staging"
+    "typecheck": "nuxi typecheck",
+    "// --- Database (NuxtHub/Drizzle) ---": "",
+    "db:generate": "nuxi db generate",
+    "db:migrate": "nuxi db migrate",
+    "db:studio": "nuxi db studio",
+    "build": "NODE_OPTIONS='--max-old-space-size=4096' nuxi build",
+    "// --- Prod ---": "",
+    "migrate:prod": "nuxi db migrate --remote",
+    "logs:prod": "wrangler tail",
+    "// --- Staging ---": "",
+    "migrate:staging": "nuxi db migrate --remote --env staging",
+    "logs:staging": "wrangler tail --env staging"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.75",
-    "@iconify-json/simple-icons": "^1.2.60",
-    "@nuxt/content": "^3.8.2",
+    "@iconify-json/lucide": "^1.2.86",
+    "@iconify-json/simple-icons": "^1.2.67",
+    "@nuxt/content": "^3.11.0",
     "@nuxt/image": "^2.0.0",
-    "@nuxt/ui": "^4.2.1",
-    "@nuxthub/core": "^0.10.1",
-    "@standard-schema/spec": "^1.0.0",
-    "@vueuse/nuxt": "^13.9.0",
+    "@nuxt/ui": "^4.4.0",
+    "@nuxthub/core": "^0.10.5",
+    "@standard-schema/spec": "^1.1.0",
+    "@vueuse/nuxt": "^14.1.0",
     "bcryptjs": "^3.0.3",
-    "drizzle-orm": "^0.45.0",
-    "nuxt": "^4.2.1",
+    "drizzle-orm": "^0.45.1",
+    "nuxt": "^4.3.0",
     "nuxt-auth-utils": "^0.5.27",
     "nuxt-authorization": "^0.3.5",
     "nuxt-auto-crud": "^1.31.0",
     "nuxt-delay-hydration": "^1.3.8",
-    "nuxt-security": "^2.5.0",
-    "zod": "^4.1.13"
+    "nuxt-security": "^2.5.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.3",
-    "@iconify-json/vscode-icons": "^1.2.37",
-    "@libsql/client": "^0.15.15",
-    "@nuxt/eslint": "^1.10.0",
-    "@nuxt/fonts": "^0.12.1",
+    "@iconify-json/vscode-icons": "^1.2.40",
+    "@libsql/client": "^0.17.0",
+    "@nuxt/eslint": "^1.13.0",
+    "@nuxt/fonts": "^0.13.0",
     "@nuxt/scripts": "^0.13.2",
     "@types/bcryptjs": "^3.0.0",
-    "better-sqlite3": "^11.5.0",
+    "better-sqlite3": "^12.6.2",
     "drizzle-kit": "^0.31.8",
-    "eslint": "^9.39.1",
-    "happy-dom": "^20.0.11",
-    "jspdf": "^3.0.4",
-    "jspdf-autotable": "^5.0.2",
+    "eslint": "^9.39.2",
+    "happy-dom": "^20.3.9",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "typescript": "^5.9.3",
-    "vue-tsc": "^3.1.5",
-    "wrangler": "^4.56.0",
+    "vue-tsc": "^3.2.3",
+    "wrangler": "^4.60.0",
     "xlsx": "^0.18.5"
   },
   "packageManager": "bun@1.2.5"
